--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "illuminate/support": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
+        "laravel/pint": "^1.10",
+        "orchestra/testbench": "^6.28",
+        "pestphp/pest": "^1.23",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
@@ -39,7 +41,10 @@
 
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "extra": {
         "laravel": {
